# rho-circles-

./: .gitignore  ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  BIG_ROUND_SUMMARY.md  CANON_COMPLIANCE_REPORT.md  CONTRIBUTING.md  Cargo.toml  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_LICENSE_BADGES.md  MIDDLE_RING_GUIDE.md  PRODUCT_UI_EXAMPLES.md  README.md  REPOSITORY_SETUP.md  SECURITY_SUMMARY.md  SUPER_ISSUE_TEMPLATE.md  THE_CANON.md  UI_IMPLEMENTATION_COMPLETE.md  build-wasm.sh  chip_registry.json
.github/workflows/: ci.yml
crates/rho-core/: Cargo.toml
crates/rho-core/src/: errors.rs  lib.rs  normalize.rs  wasm.rs
examples/: ai_passport_demo.rs  api_notary_demo.rs  content_sign_demo.rs  normalize_demo.rs
examples/chip_specs/: mod.log.json  rho.normalize.json
src/: errors.rs  lib.rs  main.rs  types.rs
src/cas/: mod.rs
src/chips/: compile.rs  exec.rs  mod.rs  normalize.rs  policy.rs  validate.rs
src/modules/: chip_build.rs  chip_eval.rs  chip_publish.rs  judge.rs  ledger.rs  log.rs  mod.rs  permit.rs
src/products/: ai_passport.rs  api_notary.rs  content_sign.rs  mod.rs
src/rc/: mod.rs
tests/: normalize_spec_tests.rs
ui/: QUICKSTART.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx
ui/src/components/: CidBadge.tsx  ComponentShowcase.tsx  HeroValidator.tsx  JsonViewer.tsx  ProofOverlay.tsx  SecureDropZone.tsx  StatusIndicator.tsx  WasmGate.tsx  index.ts
ui/src/hooks/: useRhoCore.ts
ui/src/styles/: index.css
ui/src/types/: index.ts
